k8s/overlays/pprd/elasticsearch-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  template:
    spec:
      containers:
        - name: elasticsearch
          livenessProbe:
            $patch: delete
          readinessProbe:
            $patch: delete
