k8s/overlays/pprd/patch-elasticsearch-ipclock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  template:
    spec:
      containers:
        - name: elasticsearch
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
