k8s/overlays/pprd/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basedequestions-ingress
spec:
  rules:
    - host: request-pprd.sciencespo.fr
