k8s/overlays/pprd/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basedequestions-ingress
  namespace: basedequestions
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: base-de-questions-pprd.cdsp.sciences-po.fr
      http:
        paths:
          - path: /media(/|$)(.*)
            backend:
              serviceName: basedequestions
              servicePort: 8000

          # Accès à l'application principale
          - path: /
            backend:
              serviceName: basedequestions
              servicePort: 8000
